# rarm-db

./: .gitignore  Cargo.toml  setup_workspace.sh
.cargo-husky/hooks/: pre-commit
crates/client/: Cargo.toml
crates/common/: Cargo.toml
crates/data_model/: Cargo.toml
crates/data_model/src/: data_value.rs  key.rs  lib.rs  ordered_float.rs  record.rs
crates/network/: Cargo.toml
crates/schema_def/: Cargo.toml
crates/schema_def/src/: column_definition.rs  constraint.rs  data_types.rs  lib.rs  primitive_data_type.rs  referential_action.rs  referential_actions.rs  schema_error.rs  schema_errors.rs  table_definition.rs
crates/server/: Cargo.toml
crates/sql/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage/src/: bpm_error.rs  btree_node.rs  buffer_pool_manager.rs  disk_manager.rs  evictor.rs  file_system.rs  frame.rs  leaf_node_view.rs  lib.rs  page.rs  page_guard.rs  page_id.rs  page_processing_map.rs  record_serializer.rs  serialization_error.rs  slot.rs  slotted_page_view.rs  storage_error.rs
crates/storage/src/btree/: btree_node.rs  leaf_node_view.rs  mod.rs  ops.rs
